# personal-tracker

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
automation/: oura_ingest.py  telegram_poll.py
automation/google_apps_script/: calendar_export.gs
automation/launchd/: com.personal-tracker.oura-ingest.plist  com.personal-tracker.telegram-poll.plist  install_telegram_poll_launchagent.sh
dashboard/: package-lock.json
dashboard/app/: data.ts  globals.css  layout.tsx  page.tsx  types.ts
dashboard/app/components/: DayDetail.tsx  OuraTrends.tsx  ThemeToggle.tsx  TravelSection.tsx  YearHeatmap.tsx  YearStats.tsx
dashboard/public/data/: tracker.json
data/derived/: daily_summary.csv  tracker.json  weekly_summary.csv
data/raw/apple_health/: example_export.json  sleep_2026.csv  steps_2026.csv  workouts_2026.csv
data/raw/manual/: mood_energy.csv
data/raw/oura/: activity_2025.csv  activity_2026.csv  readiness_2025.csv  readiness_2026.csv  sleep_2025.csv  sleep_2026.csv
data/raw/sauna/: sessions.csv
data/raw/travel/: flights.csv  trips.csv
data/raw/work/: hours_2025.csv  hours_2026.csv
pipeline/: cli.py  config.py  db.py  models.py  votes_api.py
pipeline/ingest/: apple_health.py  base.py  google_calendar.py  oura.py  travel.py
pipeline/transform/: merge.py
